maze tasks worked

--- a/env.template
+++ b/env.template
@@ -76,3 +76,16 @@ DEBUG=false
 
 # Rate limiting (requests per minute)
 RATE_LIMIT=60
+
+# ========================================
+# AWS / S3 Settings (for data syncing)
+# ========================================
+# IAM user or role credentials. If running on EC2/ECS with roles, you can leave
+# these blank and the SDK will pick up instance profile credentials.
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
+AWS_REGION=us-east-1
+
+# Default bucket for versioned data uploads
+S3_BUCKET=vmevalkit
