create doc folder

--- a/env.template
+++ b/env.template
@@ -9,6 +9,13 @@
 RUNWAYML_API_SECRET=your-runwayml-api-secret-here
 
 # ========================================
+# OpenAI API (Sora-2 Models)
+# ========================================
+# Get your API key from: https://platform.openai.com/
+# Supports Sora-2 and Sora-2-Pro I2V models (auto-pads images to match video resolution)
+OPENAI_API_KEY=your-openai-api-key-here
+
+# ========================================
 # Luma Dream Machine API
 # ========================================
 # Get your API key from: https://lumalabs.ai/dream-machine/api
