--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,39 +25,35 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
+    # Core inference dependencies
     "numpy>=1.24.0",
-    "Pillow>=10.0.0",
-    "opencv-python>=4.8.0",
-    "tqdm>=4.66.0",
+    "Pillow>=10.0.0", 
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "python-dotenv>=1.0.0",
+    
+    # API client dependencies
     "requests>=2.31.0",
     "httpx>=0.25.0",
-    "aiohttp>=3.9.0",
+    "aiohttp>=3.9.0", 
     "tenacity>=8.2.0",
     "runwayml>=3.17.0",
+    
+    # Google Cloud for Veo models
     "google-cloud-aiplatform>=1.38.0",
-    "google-cloud-storage>=2.10.0",
     "google-auth>=2.23.0",
-    "google-auth-httplib2>=0.1.1",
-    "imageio>=2.33.0",
-    "imageio-ffmpeg>=0.4.9",
-    "moviepy>=1.0.3",
-    "cairosvg>=2.7.0",
-    "scikit-image>=0.22.0",
-    "scipy>=1.11.0",
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-    "pandas>=2.1.0",
-    "gradio>=4.0.0",
-    "loguru>=0.7.2",
-    "rich>=13.7.0",
+    
+    # Evaluation dependencies
+    "opencv-python>=4.8.0",  # GPT-4O eval extracts video frames
+    "gradio>=4.0.0",         # Human evaluation interface
+    "pandas>=2.1.0",         # Evaluation result processing
+    
+    # S3 for API models (Luma needs image URLs)
     "boto3>=1.34.0",
-    "huggingface_hub>=0.24.0",
-    "datasets>=2.18.0",
-    "pyarrow>=14.0.2",
-    "transformers>=4.55.2"
+    
+    # Progress and logging
+    "tqdm>=4.66.0",
+    "rich>=13.7.0"
 ]
 
 [project.optional-dependencies]
